Add non-rootless docker config

--- a/debian-11/docker-rootless.yaml
+++ b/debian-11/docker-rootless.yaml
@@ -1,13 +1,9 @@
-# Docker on Debian 11 Bullseye
+# Rootless Docker on Debian 11 Bullseye
 
 message: |
-  
-  VM restart required after the first successful start:
-  
-      limactl stop docker && sleep 2 && limactl start docker 
 
   Run `docker` on the host:
-      
+    
       export DOCKER_HOST=unix://{{.Dir}}/docker.sock
       docker info
 
@@ -21,14 +17,14 @@ images:
   - location: "https://cloud.debian.org/images/cloud/bullseye/daily/latest/debian-11-generic-arm64-daily.qcow2"
     arch: "aarch64"
 
-mounts: [ ]
+mounts: []
 
 containerd:
   system: false
   user: false
 
 portForwards:
-  - guestSocket: "/run/docker.sock"
+  - guestSocket: "/run/user/{{ .UID }}/docker.sock"
     hostSocket: "{{ .Dir }}/docker.sock"
 
 provision:
@@ -73,10 +69,12 @@ provision:
       set -eux -o pipefail
       test -x /usr/bin/docker && exit 0
       apt install -y docker-ce docker-ce-cli containerd.io uidmap
+      systemctl disable --now docker
 
   - mode: user
     script: |
       #!/bin/bash
       set -eux -o pipefail
-      id -nG | grep -qw "docker" && exit 0 
-      sudo adduser "$USER" docker
+      test -S /run/user/$(id -u)/docker.sock && exit 0
+      dockerd-rootless-setuptool.sh install
+      echo "export DOCKER_HOST=unix:///run/user/$(id -u)/docker.sock" >> $HOME/.bashrc
